class EnumerationElement(object):
    """
        Has atributes:
            - name string
            - int value
            - string internal name
    """
    pass
