class Function(object):
    """
        Has atributes:
            - string name
            - string provider
            - string type
            - Interface interface
    """
    pass
