class Parameter(object):
    """
        Has atributes:
            - string name
            - string type
            - bool mandatory
            - int minlength
            - int maxlength
            - int minsize
            - int maxsize
            - bool is_array
            - string minvalue
            - string maxvalue
            - string defvalue
            - bool is_structure TODO(KKolodiy): need to rename
            - object parent
    """
    pass
